# portfolio-ds

./: LICENSE  README.md
data-analytics/: Dockerfile  README.md  requirements.txt
data-analytics/notebooks/: oms.ipynb
data-analytics/notebooks/assets/: oms-model.pkl
data-analytics/notebooks/notebook_utils/: utils.py
data-eng/: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
data-eng/dags/: etl.py
data-eng/dags/sql/: create_table.sql
data-eng/dags/src/: book.py  db.py  main.py  settings.py  utils.py
data-eng/dags/tests/: test_book.py  test_utils.py
data-eng/dags/tests/data/: catalog_urls.pkl
