[tool.poetry]
name = "book"
version = "0.1.0"
description = ""
authors = ["Alefe Freire <alefeofdealmeida@gmail.com>"]

[tool.isort]
profile = "black"

[tool.mypy]
install_types = true
strict = true
plugins = ["numpy.typing.mypy_plugin"]
exclude = [
    '^\.?venv',  # Don't analyse venv folders
    '^\.?pyenv',  # Don't analyse pyvenv folders
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
pandas = "^1.4.0"
Pillow = "^9.0.0"
beautifulsoup4 = "ˆ4.10.0"
requests = "^2.27.1"


[tool.poetry.dev-dependencies]
tox = "^3.24.4"
pytest = "^6.2.5"
mypy = "^0.931"
black = "^21.12b0"
flake8 = "^4.0.1"
pytest-coverage = "^0.0"
isort = "^5.10.1"
flake8-bugbear = "^21.11.29"
flake8-quotes = "^3.3.1"
flake8-bandit = "^3.0.0"
flake8-pytest = "^1.3"
flake8-unused-arguments = "^0.0.9"
pandas-stubs = "^1.2.0"
mock = "^4.0.3"
pytest-mock = "^3.6.1"
testfixtures = "^6.18.3"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
